<resources>
    <string name="dialog_overlay_title_action_type">Action type</string>
    <string name="dialog_overlay_title_application_selection">Select an application</string>
    <string name="dialog_overlay_title_click">Click</string>
    <string name="dialog_overlay_title_condition_config">Condition</string>
    <string name="dialog_overlay_title_copy_from">Copy from</string>
    <string name="dialog_overlay_title_end_condition_config">End Condition</string>
    <string name="dialog_overlay_title_event_config">Event</string>
    <string name="dialog_overlay_title_event_selection">Select an event</string>
    <string name="dialog_overlay_title_intent">Intent</string>
    <string name="dialog_overlay_title_pause">Wait</string>
    <string name="dialog_overlay_title_scenario_config">Scenario</string>
    <string name="dialog_overlay_title_swipe">Swipe</string>
    <string name="dialog_overlay_title_toggle_event">Event state</string>
    <string name="menu_item_title_advanced">Advanced</string>
    <string name="menu_item_title_cancel">Cancel</string>
    <string name="menu_item_title_search">Search</string>
    <string name="menu_item_title_simple">Simple</string>
    <string name="menu_item_title_events">Events</string>
    <string name="menu_item_title_config">Config</string>
    <string name="menu_item_title_debug">Debug</string>
    <string name="menu_item_title_conditions">Conditions</string>
    <string name="menu_item_title_actions">Actions</string>
    <string name="item_desc_click">Click somewhere on the screen</string>
    <string name="item_desc_click_details">During %1$s at [%2$d, %3$d]</string>
    <string name="item_desc_click_position_on_condition">On condition</string>
    <string name="item_desc_click_on_position">Click on %1$d, %2$d</string>
    <string name="item_desc_intent">Interact with another application</string>
    <string name="item_desc_intent_action">Send %1$s</string>
    <string name="item_desc_intent_action_component">Send %1$s to %2$s</string>
    <string name="item_desc_pause">Pause the detection execution</string>
    <string name="item_desc_pause_details">During %1$s</string>
    <string name="item_desc_swipe">Swipe from a position on the screen to another</string>
    <string name="item_desc_swipe_details">During %1$s from [%2$d, %3$d] to [%4$d, %5$d]</string>
    <string name="item_desc_swipe_positions">Swipe from %1$d, %2$d to %3$d, %4$d</string>
    <string name="item_desc_toggle_event">Change the enabled state of an event</string>
    <string name="item_desc_toggle_event_details">Change event state with type %1$s</string>
    <string name="item_error_action_invalid_generic">This action is invalid</string>
    <string name="item_error_action_invalid_toggle_event_target">Target event not found</string>
    <string name="item_title_click">Click</string>
    <string name="item_title_debug_generate_report">Generate a report</string>
    <string name="item_title_debug_show_view">Show debug view</string>
    <string name="item_title_intent">Intent</string>
    <string name="item_title_pause">Wait</string>
    <string name="item_title_swipe">Swipe</string>
    <string name="item_title_toggle_event">Change event state</string>
    <string name="message_empty_actions">No actions !</string>
    <string name="message_empty_conditions">No conditions !</string>
    <string name="message_empty_copy">Nothing to copy</string>
    <string name="message_empty_end_condition_config_event_none_in_scenario">No Event created in the scenario</string>
    <string name="message_empty_end_condition_config_event_no_selection">No Event selected</string>
    <string name="message_empty_event_list">No events !</string>
    <string name="message_empty_secondary_end_condition_no_events">You need at least one event to create an end condition for your scenario</string>
    <string name="message_empty_secondary_event_list">An event contains a set of actions executed when a specific condition is detected on the screen.\nYou need at least one event in your scenario to execute it.</string>
    <string name="message_empty_secondary_condition_list">A condition is a part of a screenshot that will be searched on each frames displayed by your phone screen.\nYou need at least one condition in your event.</string>
    <string name="message_empty_secondary_action_list">An action is an interaction (click, swipe…) with your phone triggered when the created conditions are fulfilled.\nYou need at least one action in your event.</string>
    <string name="message_condition_threshold">%1$d%%</string>
    <string name="message_event_copy_with_toggle_action_from_another_scenario">This event have one or more toggle event actions referencing an event from another scenario.\nYou will have to update their target events before saving your scenario.</string>
    <string name="message_event_delete_associated_end_condition">This event have one or more end conditions referencing it. Deleting this event will delete the associated end conditions as well.\nAre you sure ?</string>
    <string name="message_event_delete_associated_action">This event have one or more actions referencing it. Deleting this event will delete the associated actions as well.\nAre you sure ?</string>
    <string name="toast_configure_single_click">Touch the position to click on.</string>
    <string name="toast_configure_swipe_from">Touch the position to start the swipe from.</string>
    <string name="toast_configure_swipe_to">Touch the position to end the swipe to.</string>
    <string name="section_title_condition_detection_details">Detection details</string>
    <string name="section_title_condition_threshold">Tolerated difference</string>
    <string name="section_title_detection_quality_title">Detection quality</string>
    <string name="section_title_end_condition">End conditions</string>
    <string name="section_title_intent_extras_value">Value</string>
    <string name="section_title_start_application">Start application</string>
    <string name="list_header_copy_event_this">Events from this scenario</string>
    <string name="list_header_copy_event_all">Events from all scenarios</string>
    <string name="list_header_copy_conditions_this">Conditions from this event</string>
    <string name="list_header_copy_conditions_all">Conditions from all events</string>
    <string name="list_header_copy_action_this">Actions from this event</string>
    <string name="list_header_copy_action_all">Actions from all events</string>
    <string name="search_view_hint_event_copy">Search by event name</string>
    <string name="search_view_hint_action_copy">Search by action name</string>
    <string name="search_view_hint_condition_copy">Search by condition name</string>
    <string name="button_text_click_position_select">Select the position</string>
    <string name="button_text_create_scenario">Create a scenario</string>
    <string name="button_text_intent_extra_type_select">Select a type</string>
    <string name="button_text_quality_speed">Speed</string>
    <string name="button_text_quality_precision">Precision</string>
    <string name="button_text_swipe_positions_select">Select the positions</string>
    <string name="input_field_label_name">Name</string>
    <string name="input_field_label_click_press_duration">Press duration (ms)</string>
    <string name="input_field_label_execution_count">Executions</string>
    <string name="input_field_label_intent_extra_key">Key</string>
    <string name="input_field_label_pause_duration">Pause duration (ms)</string>
    <string name="input_field_label_scenario_name">Scenario name</string>
    <string name="input_field_label_swipe_duration">Swipe duration (ms)</string>
    <string name="input_field_label_anti_detection">Anti-detection</string>
    <string name="input_field_label_event_state">State</string>
    <string name="input_field_error_required">Required</string>
    <string name="input_field_toggle_event_type">New event state</string>
    <string name="dropdown_item_title_anti_detection_enabled">Enabled</string>
    <string name="dropdown_item_title_anti_detection_disabled">Disabled</string>
    <string name="dropdown_helper_text_anti_detection_enabled">Randomize the click swipe and pause positions and durations by a small random offset</string>
    <string name="dropdown_helper_text_anti_detection_disabled">Execute all actions as declared</string>
    <string name="dropdown_item_title_event_state_enabled">Enabled</string>
    <string name="dropdown_item_title_event_state_disabled">Disabled</string>
    <string name="dropdown_helper_text_event_state_enabled">This event will be interpreted normally when playing the scenario</string>
    <string name="dropdown_helper_text_event_state_disabled">This event needs to be enabled by an action to be interpreted when playing the scenario</string>
    <string name="dropdown_item_title_toggle_event_state_enable">Enable</string>
    <string name="dropdown_item_title_toggle_event_state_disable">Disable</string>
    <string name="dropdown_item_title_toggle_event_state_toggle">Toggle</string>
    <string name="dropdown_helper_text_toggle_event_state_enable">The event will start being interpreted when playing the scenario</string>
    <string name="dropdown_helper_text_toggle_event_state_disable">The event will stop being interpreted when playing the scenario</string>
    <string name="dropdown_helper_text_toggle_event_state_toggle">When playing the scenario, start interpreting the event if it is disabled, stop if it is enabled</string>
    <string name="dropdown_label_condition_operator">Conditions</string>
    <string name="dropdown_item_title_condition_or">One</string>
    <string name="dropdown_item_title_condition_and">All</string>
    <string name="dropdown_helper_text_condition_or">Only one condition must be fulfilled to trigger the actions</string>
    <string name="dropdown_helper_text_condition_and">All conditions must be fulfilled to trigger the actions</string>
    <string name="dropdown_helper_text_end_condition_or">Only one condition must be fulfilled to stop the scenario</string>
    <string name="dropdown_helper_text_end_condition_and">All conditions must be fulfilled to stop the scenario</string>
    <string name="dropdown_label_condition_detection_type">Detection type</string>
    <string name="dropdown_item_title_detection_type_exact">Exact</string>
    <string name="dropdown_item_title_detection_type_screen">Screen</string>
    <string name="dropdown_helper_text_detection_type_exact">The condition detection is made at the captured position</string>
    <string name="dropdown_helper_text_detection_type_screen">The condition detection is made on the whole screen</string>
    <string name="dropdown_label_condition_visibility">Visibility</string>
    <string name="dropdown_item_title_condition_visibility_present">Present</string>
    <string name="dropdown_item_title_condition_visibility_absent">Absent</string>
    <string name="dropdown_helper_text_condition_visibility_present">The condition must be detected</string>
    <string name="dropdown_helper_text_condition_visibility_absent">The condition must not be detected</string>
    <string name="dropdown_label_click_position_type">Click on</string>
    <string name="dropdown_item_title_click_position_type_on_condition">Condition</string>
    <string name="dropdown_item_title_click_position_type_on_position">Selected position</string>
    <string name="dropdown_helper_text_click_position_type_on_condition">Click on the detected condition</string>
    <string name="dropdown_helper_text_click_position_type_on_position">Click on the selected position</string>
    <string name="dropdown_label_intent_sending_type">Type</string>
    <string name="dropdown_label_intent_extra_value_type">Value type</string>
    <string name="content_desc_image_condition">The image to be detected</string>
</resources>