<?xml version="1.0" encoding="utf-8"?>
 
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_card"
    style="@style/AppTheme.Widget.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_default"
        android:layout_marginVertical="@dimen/margin_vertical_large">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_title"
            style="@style/AppTheme.TextAppearance.CardTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dialog_overlay_title_event_config" />

        <include
            android:id="@+id/include_selected_event"
            layout="@layout/item_event"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_big"
            android:layout_marginTop="@dimen/margin_vertical_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_title"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_empty"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/message_empty_end_condition_config_event_no_selection"
            android:textAlignment="center"
            tools:visibility="gone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/event_none"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:layout_marginBottom="@dimen/margin_vertical_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/message_empty_end_condition_config_event_none_in_scenario"
            android:textAlignment="center"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>