<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_dialog_navigation_top_bar"
        android:id="@+id/layout_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:layout_marginBottom="@dimen/margin_vertical_extra_large"
            android:orientation="vertical"
            tools:layout_gravity="center">

            <include layout="@layout/include_input_field_text"
                android:id="@+id/edit_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginBottom="@dimen/margin_horizontal_small"
                app:endIconMode="clear_text"
                android:hint="@string/input_field_label_name"/>

            <com.google.android.material.card.MaterialCardView
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginBottom="@dimen/margin_vertical_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                    android:layout_marginVertical="@dimen/margin_vertical_large"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.TextAppearance.CardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/section_title_condition_detection_details"
                        android:labelFor="@+id/edit_name"/>

                    <ImageView
                        android:id="@+id/image_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_vertical_small"
                        android:layout_marginBottom="@dimen/margin_vertical_large"
                        android:maxWidth="@dimen/dialog_condition_max_width"
                        android:maxHeight="@dimen/dialog_condition_max_height"
                        android:minWidth="50dp"
                        android:minHeight="100dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/content_desc_image_condition"
                        tools:src="@drawable/ic_click"/>

                    <include layout="@layout/include_input_field_dropdown"
                        android:id="@+id/condition_detection_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_vertical_default"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/AppTheme.Widget.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
